client/kube/production/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: cohesiv
  name: cohesiv-deployment
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 40%
  template:
    metadata:
      labels:
        app: cohesiv
