client/kube/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: mypds
  labels:
    application: app
spec:
  type: NodePort
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4040
